--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
+    "express": "^4.18.2",
     "node": "^20.1.0"
-  }
+  },
+  "name": "api-homework",
+  "description": "software engineering class",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
